# mkdocs-examples

./: .gitignore  Makefile  README.md  entangled.toml  mkdocs.yml  pyproject.toml
.entangled/: filedb.json
.github/workflows/: deploy-pages.yaml
demo/: __init__.py  lsystem.py  plot_buddha_iters.gp  plot_buddha_subdiv.gp  plot_dragon.gp  plot_fern.gp  plot_koch.gp  plot_sierspinsky.gp  preamble.gp  sierspinsky_table.py  turtle.py
demo/buddhabrot/: Cargo.toml
demo/buddhabrot/src/: main.rs
docs/: buddhabrot.md  index.md  l-systems.md
include/: sierspinsky-table.md
