[tool.poetry]
name = "mkdocs-examples"
version = "0.1.0"
description = "Development environment for Entangled and MkDocs"
authors = ["Your Name <you@example.com>"]
license = "Apache 2"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
mkdocs = "^1.4.3"
mkdocs-material = "^9.1.13"
mkdocs-entangled-plugin = "^0.2.0"
# mkdocs-entangled-plugin = {path = "../mkdocs-entangled-plugin", develop = true}
entangled-cli = {extras = ["rich"], version = "^2.0.0b1"}
# entangled-cli = {path = "../entangled.py", extras = ["rich"], develop = true}
mkdocs-macros-plugin = "^0.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
