[package]
name = "buddhabrot"
description = "Buddhabrot demo for Literate Programming using Entangled"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
indicatif = { version = "0.17.3", features = ["rayon"] }
ndarray = "0.15.6"
num = "0.4.0"
rand = "0.8.5"
rayon = "1.7.0"
serde = "1.0.163"
toml = "0.7.4"
